--- a/frontend/styles/views/main/main-view.css
+++ b/frontend/styles/views/main/main-view.css
@@ -35,5 +35,8 @@ h4 {
 
 body {
   margin: 0 auto;
-  /*max-width: 85%;*/
+  margin-left: auto;
+  margin-right: auto;
+  width: 80%
+  /*max-width: 90%;*/
 }
